# uiua_kernel

./: pyproject.toml  readme.md
JUNK/: test_uiua.ipynb  testing.ipynb
notebooks/: Test Popen.ipynb  Test Uiua Kernel.ipynb
src/uiua_kernel/: kernel.json  uiua_kernel.py
