[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uiua_kernel"
version = "0.1.0"
description = "A custom Jupyter kernel for UIUA"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = "MIT"
readme = "readme.md"
requires-python = ">=3.6"
dependencies = [
    "ipykernel",
    "ansi2html"
]

[project.urls]
homepage = "https://yourprojecthomepage.com"
repository = "https://github.com/yourusername/uiua_kernel"
documentation = "https://yourprojectdocumentation.com"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages=["src/uiua_kernel"]