[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uiua_kernel"
version = "0.1.0"
description = "A custom Jupyter kernel for UIUA"
authors = [{name = "thehappycheese"}]
license = "MIT"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel",
    "ansi2html"
]

[project.urls]
repository = "https://github.com/thehappycheese/uiua_kernel"
uiua = "https://www.uiua.org/"

[tool.hatch.build.targets.wheel]
packages=["src/uiua_kernel"]